--- a/Portafolio/portafolio.html
+++ b/Portafolio/portafolio.html
@@ -5,19 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="./portafolio.css">
     <title>Mi Portafolio</title>
 </head>
 
 <body>
     <nav>
 
+        <img class="logo" src="../img/Logo MOTIONTECH.png" alt="Logo">
+
     </nav>
     <main>
         <h1 class="tituloPortafolio">Este es un titulo</h1>
+
+        <p class="tituloPortafolio">Esto es un Parrafo</p>
+
+        <h2 id="Titulo2">Esto es un titulo con ID</h2>
     </main>
     <footer>
 
     </footer>
+    <style>
+        body {
+            background-color: violet;
+        }
+    </style>
 </body>
 
 </html>
