--- a/index.html
+++ b/index.html
@@ -5,24 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="">
     <title>Mis Proyectos</title>
 </head>
 
 <body>
+    <div id="wrapper">
 
-    <nav>
-        <ul>
-            <li>Inicio</li>
-            <li>Productos</li>
-            <li>Contacto</li>
-        </ul>
-    </nav>
-    <main>
+        <nav>
+            <ul>
+                <li><a href="./Portafolio/portafolio.html"> Mi Portafolio</a></li>
+                <li>Reproductor</li>
+                <li>Calculadora</li>
+            </ul>
+        </nav>
 
-    </main>
-    <footer>
+        <main>
 
-    </footer>
+        </main>
+
+        <footer>
+
+        </footer>
+    </div>
 </body>
 
 </html>
