--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="./Portafolio/portafolio.html"> Mi Portafolio</a></li>
                 <li>Reproductor</li>
                 <li>Calculadora</li>
+                <li>Calculadora2</li>
             </ul>
         </nav>
 
