Cambios en flex y grid

--- a/index.html
+++ b/index.html
@@ -5,21 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>Mis Proyectos</title>
 </head>
 
 <body>
+
     <div id="wrapper">
 
         <nav>
+            <img src="./img/Logo MOTIONTECH.png" alt="LogoMotiontech">
             <ul>
-                <li><a href="./Portafolio/portafolio.html"> Mi Portafolio</a></li>
-                <li>Reproductor</li>
-                <li>Calculadora</li>
-                <li>Calculadora2</li>
+                <li class="itemA"><a href="./Portafolio/portafolio.html"> Mi Portafolio</a></li>
+                <li class="itemB">Reproductor</li>
+                <li class="itemC">Calculadora</li>
+                <li class="itemD">Calculadora2</li>
             </ul>
         </nav>
+        
+        
 
         <main>
 
@@ -30,5 +36,6 @@
         </footer>
     </div>
 </body>
+
 
 </html>
