--- a/Portafolio/portafolio.html
+++ b/Portafolio/portafolio.html
@@ -10,26 +10,44 @@
 </head>
 
 <body>
-    <nav>
+    <div id="wrapper">
 
-        <img class="logo" src="../img/Logo MOTIONTECH.png" alt="Logo">
+        <!-- METODOLOGIA BEM -->
+        <!-- BLOQUE -->
+        <!-- ELEMENTO -->
+        <!-- MODIFICADOR -->
+        <nav class="nav">
+            <div class="nav__img">
+                <img src="../img/Logo MOTIONTECH.png" alt="logo">
+            </div>
+            <ul class="nav__enlaces">
+                <li class="nav__li"><a href="#"> Mi Portafolio</a></li>
+                <li class="nav__li"><a href="../Reproductor/reproductor.html"> Reproductor </a></li>
+            </ul>
+        </nav>
 
-    </nav>
-    <main>
-        <h1 class="tituloPortafolio">Este es un titulo</h1>
+        <main>
+            <div class="tarjetas">
+                <a class="tarjetas__elemento" href="">
+                    <h2>Imagen 1</h2>
+                </a>
+            </div>
+            <div class="tarjetas">
+                <a class="tarjetas__elemento" href="">
+                    <h2>Imagen 1</h2>
+                </a>
+            </div>
+            <div class="tarjetas">
+                <a class="tarjetas__elemento" href="">
+                    <h2>Imagen 1</h2>
+                </a>
+            </div>
+        </main>
 
-        <p class="tituloPortafolio">Esto es un Parrafo</p>
+        <footer>
 
-        <h2 id="Titulo2">Esto es un titulo con ID</h2>
-    </main>
-    <footer>
-
-    </footer>
-    <style>
-        body {
-            background-color: violet;
-        }
-    </style>
+        </footer>
+    </div>
 </body>
 
 </html>
