--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="">
     <title>Mis Proyectos</title>
@@ -12,12 +16,17 @@
 <body>
     <div id="wrapper">
 
-        <nav>
-            <ul>
-                <li><a href="./Portafolio/portafolio.html"> Mi Portafolio</a></li>
-                <li>Reproductor</li>
-                <li>Calculadora</li>
-                <li>Calculadora2</li>
+        <!-- METODOLOGIA BEM -->
+        <!-- BLOQUE -->
+        <!-- ELEMENTO -->
+        <!-- MODIFICADOR -->
+        <nav class="nav">
+            <div class="nav__img">
+                <img src="./img/Logo MOTIONTECH.png" alt="logo">
+            </div>
+            <ul class="nav__enlaces">
+                <li class="nav__li"><a href="./Portafolio/portafolio.html"> Mi Portafolio</a></li>
+                <li class="nav__li"><a href="./Reproductor/reproductor.html"></a> Reproductor</li>
             </ul>
         </nav>
 
