Codigo del reproductor

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <ul class="nav__enlaces">
                 <li class="nav__li"><a href="./Portafolio/portafolio.html"> Mi Portafolio</a></li>
                 <li class="nav__li"><a href="./Reproductor/reproductor.html"></a> Reproductor</li>
+                <li class="nav__li"><a href="./BuscadorAutos/index.html">Buscador de Autos</a></li>
+
+
             </ul>
         </nav>
 
